--- a/web/index.pug
+++ b/web/index.pug
@@ -28,6 +28,8 @@ html
             li: a(href="https://play.google.com/store/apps/dev?id=5401138465689796048") Aplikasi lainnya
     .container
       include include/isi.pug
+      center
+        a.btn.btn-success(href="https://zen.mabaiz.web.id/komunitas-id") Join Komunitas
     +js("jquery/jquery.min.js")
     +js("bootstrap/js/bootstrap.min.js")
     +js("zen/app.js")
